exposing correct ports

--- a/services/service1/Dockerfile
+++ b/services/service1/Dockerfile
@@ -2,7 +2,7 @@ FROM node:20
 
 
 WORKDIR /app
-COPY patient-service.js /app
+COPY appointment-service.js /app
 
 # Install dependencies
 RUN npm init -y 
@@ -12,4 +12,4 @@ RUN npm install express
 EXPOSE 3001
 
 # Start the application
-CMD ["node", "patient-service.js"]
+CMD ["node", "appointment-service.js"]
