--- a/services/service2/Dockerfile
+++ b/services/service2/Dockerfile
@@ -2,14 +2,14 @@ FROM node:20
 
 
 WORKDIR /app
-COPY appointment-service.js /app
+COPY patient-service.js /app
 
 # Install dependencies
 RUN npm init -y 
 RUN npm install express
 
 
-EXPOSE 3001
+EXPOSE 3000
 
 # Start the application
-CMD ["node", "appointment-service.js"]
+CMD ["node", "patient-service.js"]
