--- a/.github/workflows/pr-markdown.yaml
+++ b/.github/workflows/pr-markdown.yaml
@@ -38,6 +38,7 @@ jobs:
       - name: Comment on PR
         uses: actions/github-script@v6
         with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
             github.rest.issues.createComment({
               issue_number: context.issue.number,
