--- a/.github/workflows/pr-markdown.yaml
+++ b/.github/workflows/pr-markdown.yaml
@@ -33,12 +33,12 @@ jobs:
           git config --global user.email "github-actions@github.com"
           git add pr-summary.md
           git commit -m "add pr summary markdown"
-          git push origin HEAD:${{ github.event.pull_request.head.ref }}
+          git push https://${{ secrets.PAT }}@github.com/${{ github.repository }}.git HEAD:${{ github.event.pull_request.head.ref }}
 
       - name: Comment on PR
         uses: actions/github-script@v6
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          github-token: ${{ secrets.PAT }}
           script: |
             github.rest.issues.createComment({
               issue_number: context.issue.number,
