--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -62,4 +62,36 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v3
         with:
-         
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
+
+      - name: Login to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v1
+
+      - name: Generate Unique Image Tag
+        run: echo "IMAGE_TAG=$(date +%Y%m%d%H%M%S)" >> $GITHUB_ENV
+
+      - name: Build and Push Docker Image for Service 1
+        run: |
+          cd services/service1
+          docker build -t service1:$IMAGE_TAG .
+          docker tag service1:$IMAGE_TAG $ECR_REPO_SERVICE1:$IMAGE_TAG
+          docker push $ECR_REPO_SERVICE1:$IMAGE_TAG
+
+      - name: Build and Push Docker Image for Service 2
+        run: |
+          cd services/service2
+          docker build -t service2:$IMAGE_TAG .
+          docker tag service2:$IMAGE_TAG $ECR_REPO_SERVICE2:$IMAGE_TAG
+          docker push $ECR_REPO_SERVICE2:$IMAGE_TAG
+
+      - name: Running Terraform Apply with dev.tfvars and Image URIs
+        run: |
+          cd terraform
+          terraform init
+          terraform apply -auto-approve \
+            -var-file=dev.tfvars \
+            -var="service1_image=$ECR_REPO_SERVICE1:$IMAGE_TAG" \
+            -var="service2_image=$ECR_REPO_SERVICE2:$IMAGE_TAG"
